TestSuite/PascalABCTests/errors/err0077.pas
  	 // ?? ?????? ???????????????

function operator+(i,j,k: integer): integer;
begin
  
end;

begin
end.